--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>markdown-hierarchy-builder</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Indo Cipanas Bonsai | Premium Bonsai and Ornamental Plants</title>
+    <meta name="description" content="Indo Cipanas Bonsai - Crafting Nature's Masterpieces. Premium bonsai specimens, rare plants, and landscaping solutions from Indonesia." />
+    <meta name="author" content="Indo Cipanas Bonsai" />
     <meta property="og:image" content="/og-image.png" />
+    <meta property="og:title" content="Indo Cipanas Bonsai | Premium Bonsai and Ornamental Plants" />
+    <meta property="og:description" content="Ethically sourced, premium bonsai specimens and rare ornamental plants from Indonesia's finest nurseries." />
+    <meta name="keywords" content="bonsai, Indonesian bonsai, premium plants, rare plants, ornamental plants, bonsai export" />
   </head>
 
   <body>
